<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.cestevez.a5.ui.movie.viewmodel.MovieViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.SecondFragment"
    android:background="@color/backgroundLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_gap"
            android:layout_marginTop="@dimen/dft_gap"
            android:layout_marginEnd="@dimen/s_gap"
            android:gravity="center"
            android:text="@string/new_movie_text"
            android:textColor="@color/white"
            android:textSize="@dimen/tittle_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/std_gap"
            android:layout_marginTop="@dimen/big_gap"
            android:layout_marginEnd="16dp"
            android:background="@color/cardLayout"
            android:text="@={viewmodel.name}"
            android:hint="@string/hint_name"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/std_gap"
            android:text="@={viewmodel.category}"
            android:layout_marginTop="@dimen/std_gap"
            android:layout_marginEnd="@dimen/std_gap"
            android:background="@color/cardLayout"
            android:hint="@string/category_text"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/std_gap"
            android:text="@={viewmodel.description}"
            android:layout_marginTop="@dimen/std_gap"
            android:layout_marginEnd="@dimen/std_gap"
            android:background="@color/cardLayout"
            android:hint="@string/description_hint"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calificationEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/std_gap"
            android:text="@={viewmodel.qualification}"
            android:layout_marginTop="@dimen/std_gap"
            android:layout_marginEnd="@dimen/std_gap"
            android:background="@color/cardLayout"
            android:hint="Calification"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dft_gap"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/submit_text"
            android:onClick="@{()->viewmodel.createMovie()}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calificationEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>